// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View layout modifiers should render view with flex modifier 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
    ]
  }
/>
`;

exports[`View layout modifiers should render view with left+bottom modifier 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "justifyContent": "flex-end",
      },
    ]
  }
/>
`;

exports[`View layout modifiers should render view with right+top modifier 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-end",
        "justifyContent": "flex-start",
      },
    ]
  }
/>
`;

exports[`View layout modifiers should render view with row modifier 1`] = `
<View
  row={true}
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
    ]
  }
/>
`;

exports[`View should render clean view 1`] = `
<View
  style={Array []}
/>
`;

exports[`View spacings modifiers should render view with horizontal margin 1`] = `
<View
  marginH-20={true}
  style={
    Array [
      Object {
        "marginHorizontal": 20,
      },
    ]
  }
/>
`;

exports[`View spacings modifiers should render view with horizontal padding 1`] = `
<View
  paddingH-20={true}
  style={
    Array [
      Object {
        "paddingHorizontal": 20,
      },
    ]
  }
/>
`;

exports[`View spacings modifiers should render view with right and left margin 1`] = `
<View
  marginL-10={true}
  marginR-20={true}
  style={
    Array [
      Object {
        "marginLeft": 10,
        "marginRight": 20,
      },
    ]
  }
/>
`;

exports[`View spacings modifiers should render view with right and left padding 1`] = `
<View
  paddingL-10={true}
  paddingR-20={true}
  style={
    Array [
      Object {
        "paddingLeft": 10,
        "paddingRight": 20,
      },
    ]
  }
/>
`;

exports[`View spacings modifiers should render view with top and bottom margin 1`] = `
<View
  marginL-10={true}
  marginR-20={true}
  style={
    Array [
      Object {
        "marginLeft": 10,
        "marginRight": 20,
      },
    ]
  }
/>
`;

exports[`View spacings modifiers should render view with top and bottom padding 1`] = `
<View
  paddingL-10={true}
  paddingR-20={true}
  style={
    Array [
      Object {
        "paddingLeft": 10,
        "paddingRight": 20,
      },
    ]
  }
/>
`;

exports[`View spacings modifiers should render view with vertical margin 1`] = `
<View
  marginV-20={true}
  style={
    Array [
      Object {
        "marginVertical": 20,
      },
    ]
  }
/>
`;

exports[`View spacings modifiers should render view with vertical padding 1`] = `
<View
  paddingV-20={true}
  style={
    Array [
      Object {
        "paddingVertical": 20,
      },
    ]
  }
/>
`;

exports[`View style modifiers should render view with black background color modifier 1`] = `
<View
  bg-black={true}
  style={
    Array [
      Object {
        "backgroundColor": "#000000",
      },
    ]
  }
/>
`;

exports[`View style modifiers should render view with border radius modifier 1`] = `
<View
  br20={true}
  style={
    Array [
      Object {
        "borderRadius": 6,
      },
    ]
  }
/>
`;

exports[`View style modifiers should render view with red50 background color modifier 1`] = `
<View
  bg-red50={true}
  style={
    Array [
      Object {
        "backgroundColor": "#F79A94",
      },
    ]
  }
/>
`;
